# aichallenge-racingkart

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  docker_build.sh  docker_run.sh  requirements.txt  run_parallel_submissions.bash  setup.bash
aichallenge/workspace/src/aichallenge_submit/bev_scene_stack/: CMakeLists.txt  bev_scene_stack_node.py  package.xml
aichallenge/workspace/src/aichallenge_submit/bev_scene_stack/bev_scene_stack/: __init__.py
aichallenge/workspace/src/aichallenge_submit/bev_scene_stack/config/: bev_scene_stack.param.yaml
aichallenge/workspace/src/aichallenge_submit/bev_scene_stack/launch/: bev_scene_stack.launch.xml
aichallenge/workspace/src/aichallenge_submit/longitudinal_safety_filter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/longitudinal_safety_filter/config/: longitudinal_safety_filter.param.yaml
aichallenge/workspace/src/aichallenge_submit/longitudinal_safety_filter/launch/: longitudinal_safety_filter.launch.xml
aichallenge/workspace/src/aichallenge_submit/longitudinal_safety_filter/longitudinal_safety_filter/: longitudinal_safety_filter_node.py
aichallenge/workspace/src/aichallenge_submit/longitudinal_safety_filter/test/: test_safety_filter_logic.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/: CMakeLists.txt  MPC_JAGGEDNESS_ANALYSIS.md  package.xml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/config/: config.yaml  sim_config.yaml
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/env/final_ver3/: avoidance_matrix_results.csv  traj_mincurv_constraints.csv  traj_mincurv_sections.csv
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/launch/: mpc_controller.launch.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/multi_purpose_mpc_ros/: mpc_controller.py  v2x_vehicle_tracker.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/multi_purpose_mpc_ros/core/: MPC.py  reference_path.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/scripts/: plot_reference_csv.py
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/src/: mpc_controller_cpp.cpp
aichallenge/workspace/src/aichallenge_submit/multi_purpose_mpc_ros/test/: test_longitudinal_safety_layer.py  test_mpc_cpp_qp_equivalence.py  test_mpc_osqp_cache_prerequisites.py  test_osqp_setup_update_equivalence.py  test_v2x_vehicle_tracker.py
aichallenge/workspace/src/aichallenge_submit/trajectory_image_overlay/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/trajectory_image_overlay/config/: trajectory_image_overlay.param.yaml
aichallenge/workspace/src/aichallenge_submit/trajectory_image_overlay/launch/: trajectory_image_overlay.launch.xml
aichallenge/workspace/src/aichallenge_submit/trajectory_image_overlay/trajectory_image_overlay/: trajectory_image_overlay_node.py
aichallenge/workspace/src/aichallenge_submit/v2x_avoidance_planner/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/v2x_avoidance_planner/config/: v2x_avoidance_planner.param.yaml
aichallenge/workspace/src/aichallenge_submit/v2x_avoidance_planner/launch/: v2x_avoidance_planner.launch.xml
aichallenge/workspace/src/aichallenge_submit/v2x_avoidance_planner/v2x_avoidance_planner/: v2x_avoidance_planner_node.py
aichallenge/workspace/src/aichallenge_submit/v2x_safety_debug/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/v2x_safety_debug/config/: v2x_safety_debug.param.yaml
aichallenge/workspace/src/aichallenge_submit/v2x_safety_debug/launch/: v2x_safety_debug.launch.xml
aichallenge/workspace/src/aichallenge_submit/v2x_safety_debug/v2x_safety_debug/: v2x_safety_debug_node.py
aichallenge/workspace/src/aichallenge_submit/velocity_former_controller/: .gitignore  CMakeLists.txt  README.md  package.xml
aichallenge/workspace/src/aichallenge_submit/velocity_former_controller/config/: velocity_former_node.param.yaml
aichallenge/workspace/src/aichallenge_submit/velocity_former_controller/launch/: velocity_former.launch.xml
aichallenge/workspace/src/aichallenge_submit/velocity_former_controller/velocity_former_controller/: velocity_former_controller_core.py  velocity_former_controller_node.py
aichallenge/workspace/src/aichallenge_submit/velocity_former_controller/velocity_former_controller/model/: __init__.py  preprocess.py  velocity_former_onnx.py
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/: autoware.rviz  autoware_vehicle_cute.rviz
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/domain/: vehicle_bridge_config.yaml.in
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/launch/: aichallenge_system.launch.xml  parallel.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/launch/mode/: remote.launch.xml  v2x.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/script/: README.md  route_safety_monitor.py  route_safety_visualizer.py  v2x_marker_publisher.py
aichallenge/workspace/src/aichallenge_system/cute_style_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
aichallenge/workspace/src/aichallenge_system/cute_style_rviz_plugin/include/cute_style_rviz_plugin/: cute_style_panel.hpp
aichallenge/workspace/src/aichallenge_system/cute_style_rviz_plugin/scripts/: cute_theme_generate.py  cute_theme_publish.py  cute_theme_watch.py
aichallenge/workspace/src/aichallenge_system/cute_style_rviz_plugin/src/: cute_style_panel.cpp
aichallenge/workspace/src/aichallenge_system/cute_style_rviz_plugin/themes/: cute_pink_purple.qss  cute_theme.yaml
aichallenge/workspace/src/aichallenge_system/v2x_msgs/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_system/v2x_msgs/msg/: V2XVehiclePosition.msg  V2XVehiclePositionArray.msg
design_docs/: plan.md  (+11 more)
(+99 files in other folders)
