<?xml version="1.0"?>
<package format="3">
  <name>trajectory_image_overlay</name>
  <version>0.0.0</version>
  <description>Overlay planned trajectories on the front camera image.</description>
  <maintainer email="hayatotokida@example.com">hayatotokida</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
