<?xml version="1.0"?>
<package format="3">
  <name>velocity_former_controller</name>
  <version>0.0.0</version>
  <description>VelocityFormer (BERT-tiny) based controller for trajectory-conditioned vehicle control.</description>
  <maintainer email="todo@gmail.com">bushio</maintainer>
  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
